--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "prisma": "prisma"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-react": "^9.1.0",
     "@google-cloud/storage": "^7.12.1",
     "@iarna/toml": "^2.2.5",
     "@monaco-editor/react": "^4.6.0",
@@ -35,10 +34,10 @@
     "@shopify/react-i18n": "^7.13.1",
     "@shopify/ui-extensions": "2024.7.x",
     "@shopify/ui-extensions-react": "^2024.7.0",
-    "ckeditor5": "^43.1.0",
-    "ckeditor5-premium-features": "^43.1.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "compare-versions": "^6.1.1",
     "cross-env": "^7.0.3",
+    "draft-js": "^0.11.7",
     "eventemitter2": "^6.4.9",
     "execa": "^8.0.1",
     "joi": "^17.13.3",
@@ -50,6 +49,7 @@
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "remix-utils": "^7.6.0",
     "semver": "^7.6.3",
     "tslib": "^2.7.0",
