--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jose": "^5.8.0",
     "lodash": "^4.17.21",
     "node-html-parser": "^6.1.13",
+    "nodemailer": "^6.9.15",
     "prisma": "^5.19.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
@@ -62,6 +63,7 @@
     "@types/eslint": "^8.56.12",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.16.5",
+    "@types/nodemailer": "^6.4.16",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.12",
     "esbuild-register": "^3.6.0",
