--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "semver": "^7.6.3",
     "tslib": "^2.7.0",
     "uuid": "^9.0.1",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.11.2",
