--- a/package.json
+++ b/package.json
@@ -20,24 +20,24 @@
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/lang-liquid": "^6.2.1",
     "@codemirror/state": "^6.4.1",
-    "@codemirror/view": "^6.34.0",
+    "@codemirror/view": "^6.34.1",
     "@google-cloud/local-auth": "2.1.0",
-    "@google-cloud/storage": "^7.12.1",
+    "@google-cloud/storage": "^7.13.0",
     "@iarna/toml": "^2.2.5",
     "@monaco-editor/react": "^4.6.0",
-    "@prisma/client": "^5.19.1",
-    "@remix-run/node": "^2.11.2",
-    "@remix-run/react": "^2.11.2",
-    "@remix-run/serve": "^2.11.2",
+    "@prisma/client": "^5.20.0",
+    "@remix-run/node": "^2.12.1",
+    "@remix-run/react": "^2.12.1",
+    "@remix-run/serve": "^2.12.1",
     "@shopify/app": "^3.58.2",
     "@shopify/app-bridge-types": "^0.0.5",
-    "@shopify/cli": "^3.66.1",
+    "@shopify/cli": "^3.67.3",
     "@shopify/network": "^3.3.0",
     "@shopify/polaris": "^12.27.0",
     "@shopify/polaris-icons": "^9.3.0",
     "@shopify/polaris-viz": "^13.4.1",
     "@shopify/react-i18n": "^7.13.1",
-    "@shopify/ui-extensions": "2024.7.x",
+    "@shopify/ui-extensions": "2024.7.0",
     "@shopify/ui-extensions-react": "^2024.7.0",
     "@tinymce/tinymce-react": "^5.1.1",
     "@uiw/react-codemirror": "^4.23.3",
@@ -46,19 +46,19 @@
     "cross-env": "^7.0.3",
     "draft-js": "^0.11.7",
     "eventemitter2": "^6.4.9",
-    "googleapis": "105",
+    "googleapis": "^105.0.0",
     "joi": "^17.13.3",
-    "jose": "^5.8.0",
+    "jose": "^5.9.3",
     "liquidjs": "^10.17.0",
     "lodash": "^4.17.21",
     "node-html-parser": "^6.1.13",
     "nodemailer": "^6.9.15",
-    "prisma": "^5.19.1",
+    "prisma": "^5.20.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
-    "remix-utils": "^7.6.0",
+    "remix-utils": "^7.7.0",
     "semver": "^7.6.3",
     "tslib": "^2.7.0",
     "uuid": "^9.0.1",
@@ -66,20 +66,20 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.11.2",
-    "@remix-run/eslint-config": "^2.11.2",
+    "@remix-run/dev": "^2.12.1",
+    "@remix-run/eslint-config": "^2.12.1",
     "@types/eslint": "^8.56.12",
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^20.16.5",
+    "@types/lodash": "^4.17.9",
+    "@types/node": "^20.16.10",
     "@types/nodemailer": "^6.4.16",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.12",
     "esbuild-register": "^3.6.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.10.0",
     "node-fetch": "^3.3.2",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.13"
   },
   "author": "Wenexus",
   "overrides": {
