--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@iarna/toml": "^2.2.5",
     "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^5.20.0",
+    "@remix-run/express": "^2.12.1",
     "@remix-run/node": "^2.12.1",
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
