--- a/extensions/checkout-extension/shopify.extension.toml
+++ b/extensions/checkout-extension/shopify.extension.toml
@@ -17,25 +17,25 @@ type = "ui_extension"
 
 [[extensions.targeting]]
 module = "./src/Checkout.tsx"
-target = "purchase.checkout.reductions.render-after"
+target = "purchase.checkout.block.render"
 
-[extensions.capabilities]
 # Gives your extension access to directly query Shopify’s storefront API.
 # https://shopify.dev/docs/api/checkout-ui-extensions/unstable/configuration#api-access
+[extensions.capabilities]
 api_access = true
+network_access = true
 
 # Gives your extension access to make external network calls, using the
 # JavaScript `fetch()` API. Learn more:
 # https://shopify.dev/docs/api/checkout-ui-extensions/unstable/configuration#network-access
-# network_access = true
 
 # Loads metafields on checkout resources, including the cart,
 # products, customers, and more. Learn more:
 # https://shopify.dev/docs/api/checkout-ui-extensions/unstable/configuration#metafields
 
-# [[extensions.metafields]]
-# namespace = "my_namespace"
-# key = "my_key"
+[[extensions.metafields]]
+namespace = "package_protection"
+key = "productVariants"
 # [[extensions.metafields]]
 # namespace = "my_namespace"
 # key = "my_other_key"
