--- a/extensions/checkout-extension/shopify.extension.toml
+++ b/extensions/checkout-extension/shopify.extension.toml
@@ -25,6 +25,11 @@ target = "purchase.checkout.block.render"
 api_access = true
 network_access = true
 
+[capabilities]
+network_access = true
+block_progress = true
+api_access = true
+
 # Gives your extension access to make external network calls, using the
 # JavaScript `fetch()` API. Learn more:
 # https://shopify.dev/docs/api/checkout-ui-extensions/unstable/configuration#network-access
