--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "codemirror": "^6.0.1",
     "compare-versions": "^6.1.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "draft-js": "^0.11.7",
     "eventemitter2": "^6.4.9",
     "googleapis": "^105.0.0",
