--- a/shopify.app.prod.toml
+++ b/shopify.app.prod.toml
@@ -2,7 +2,7 @@
 
 client_id = "014656fd1817c91322f981a3ad07bb4b"
 name = "Inhouse Shipping Protection"
-application_url = "https://shipping-protection.wenexus.io"
+application_url = "https://shipping-protection.wenexus.io/dashboard"
 embedded = true
 
 [access_scopes]
