--- a/extensions/theme-extension/shopify.extension.toml
+++ b/extensions/theme-extension/shopify.extension.toml
@@ -1,3 +1,3 @@
-name = "Inhouse Shipping Protection"
-handle = "ihsp-theme"
+name = "Overall: Shipping Protection"
+handle = "osp-theme"
 type = "theme"
