--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dotenv": "^16.4.5",
     "draft-js": "^0.11.7",
     "eventemitter2": "^6.4.9",
+    "execa": "^9.5.2",
     "googleapis": "^105.0.0",
     "joi": "^17.13.3",
     "jose": "^5.9.3",
